@@ -1,9 +1,11 @@
 package me.yuugao.holymoderation.client.modules.drawable.element;
 
+import me.yuugao.holymoderation.client.modules.drawable.element.state.CheckoutsRenderState;
+import me.yuugao.holymoderation.client.modules.drawable.element.state.provider.CheckoutsRenderStateProvider;
+import me.yuugao.holymoderation.client.modules.drawable.render.PositionMode;
 import me.yuugao.holymoderation.client.util.serviceLocator.ServiceContext;
 import me.yuugao.holymoderation.client.util.serviceLocator.service.MinecraftService;
 import me.yuugao.holymoderation.client.util.serviceLocator.service.Render2DService;
-import me.yuugao.holymoderation.client.util.serviceLocator.service.StateService;
 
 import net.minecraft.client.font.TextRenderer;
 import net.minecraft.client.gui.DrawContext;
@@ -13,7 +15,7 @@ import org.apache.commons.lang3.StringUtils;
 
 import java.awt.Color;
 
-public class CheckoutsDrawableElement extends DrawableElement {
+public class CheckoutsDrawableElement extends DrawableElement<CheckoutsRenderState> {
     private float coAnim = 0f;
     private float coAnimTarget = 0f;
     private float coCurrentWidth = 1f;
@@ -23,7 +25,7 @@ public class CheckoutsDrawableElement extends DrawableElement {
     private boolean coClearDisplayWhenHidden = false;
 
     public CheckoutsDrawableElement(ServiceContext serviceContext, PositionMode positionMode) {
-        super(serviceContext, positionMode);
+        super(serviceContext, positionMode, new CheckoutsRenderStateProvider(serviceContext));
     }
 
     @Override
@@ -33,22 +35,10 @@ public class CheckoutsDrawableElement extends DrawableElement {
     }
 
     @Override
-    protected boolean shouldRender() {
-        StateService stateService = serviceContext.getStateService();
-
-        return !stateService.getCheckoutPlayer().isEmpty();
-    }
-
-    @Override
-    protected void renderContent(DrawContext ctx, int z) {
-        StateService stateService = serviceContext.getStateService();
-        MinecraftService minecraftService = serviceContext.getMinecraftService();
-        Render2DService render2DService = serviceContext.getRender2DService();
-
-        MatrixStack ms = ctx.getMatrices();
+    protected void render(DrawContext ctx, int z, CheckoutsRenderState renderState) {
         coAnim += (coAnimTarget - coAnim) * 0.15f;
 
-        String player = stateService.getCheckoutPlayer();
+        String player = renderState.checkoutPlayer();
         if (!coLastPlayer.equals(player)) {
             if (coLastPlayer.isEmpty() && !player.isEmpty()) {
                 checkoutStartMillis = System.currentTimeMillis();
@@ -62,11 +52,31 @@ public class CheckoutsDrawableElement extends DrawableElement {
 
         if (coAnim < 0.01f) return;
 
-        TextRenderer tr = minecraftService.getClient().textRenderer;
+        long elapsed = checkoutStartMillis == 0L
+                ? 0L
+                : (System.currentTimeMillis() - checkoutStartMillis) / 1000L;
 
-        long elapsed = checkoutStartMillis == 0L ? 0L : (System.currentTimeMillis() - checkoutStartMillis) / 1000L;
-        String display = "Текущая проверка: %s | %s:%s".formatted(
-                player.isEmpty() ? coLastPlayer : player, elapsed / 60, String.format("%02d", elapsed % 60));
+        String content = "Текущая проверка: %s | %s:%s".formatted(
+                player.isEmpty() ? coLastPlayer : player,
+                elapsed / 60,
+                String.format("%02d", elapsed % 60)
+        );
+
+        renderContent(content, ctx, z);
+
+        if (coAnim < 0.02f && coAnimTarget == 0f && coClearDisplayWhenHidden) {
+            checkoutStartMillis = 0L;
+            coClearDisplayWhenHidden = false;
+            coLastPlayer = StringUtils.EMPTY;
+        }
+    }
+
+    private void renderContent(String display, DrawContext ctx, int z) {
+        Render2DService render2DService = serviceContext.getRender2DService();
+        MinecraftService minecraftService = serviceContext.getMinecraftService();
+
+        TextRenderer tr = minecraftService.getClient().textRenderer;
+        MatrixStack ms = ctx.getMatrices();
 
         float targetWidth = tr.getWidth(display) + 16f;
         float targetHeight = tr.fontHeight + 12f;
@@ -80,36 +90,34 @@ public class CheckoutsDrawableElement extends DrawableElement {
         Color bg = new Color(10, 20, 40, 220);
         Color outline = new Color(60, 120, 220);
 
-        render2DService.setupRender();
-
         float[] tl = topLeftLocal();
         float[] pv = scalePivotLocal();
-        float tlx = tl[0];
-        float tly = tl[1];
-        float px = pv[0];
-        float py = pv[1];
+
+        render2DService.setupRender();
 
         ms.push();
-        ms.translate(tlx, tly, 0f);
-        ms.translate(px, py, 0f);
+        ms.translate(tl[0] + pv[0], tl[1] + pv[1], 0f);
         ms.scale(coAnim, coAnim, 1f);
-        ms.translate(-px, -py, 0f);
+        ms.translate(-pv[0], -pv[1], 0f);
 
-        render2DService.renderSoftRoundedRectOutline(ms, 0f, 0f, width, height, z,
-                10f, bg, outline, 1.5f, 3);
+        render2DService.renderSoftRoundedRectOutline(
+                ms, 0f, 0f, width, height, z,
+                10f, bg, outline, 1.5f, 3
+        );
 
-        render2DService.renderText(tr, display, (int) (width / 2f - tr.getWidth(display) / 2f),
-                (int) (height / 2f - tr.fontHeight / 2f + 0.5f), z, 0xffffffff, false, ctx);
+        render2DService.renderText(
+                tr,
+                display,
+                (int) (width / 2f - tr.getWidth(display) / 2f),
+                (int) (height / 2f - tr.fontHeight / 2f + 0.5f),
+                z,
+                0xffffffff,
+                false,
+                ctx
+        );
 
         ms.pop();
-
         render2DService.endRender();
-
-        if (coAnim < 0.02f && coAnimTarget == 0f && coClearDisplayWhenHidden) {
-            checkoutStartMillis = 0L;
-            coClearDisplayWhenHidden = false;
-            coLastPlayer = StringUtils.EMPTY;
-        }
     }
 
     public void coStartForLocal(String player) {
